<resources>
    <string name="app_name">Practica 1</string>
    <string name="main_description">Servicios Móviles. Grado en Ingeniería Telemática</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_auth_user">Usuario</string>
    <string name="fragment_button_connect">Entrar</string>
    <string name="login_pass">Clave</string>
    <string name="login_hint_user">Escriba su usuario</string>
    <string name="login_hint_pass">Escriba aquí su clave</string>
    <string name="login_ip">Dirección</string>
    <string name="lagin_port">Puerto</string>
    <string name="login_hint_ip">Dirección IP o dominio</string>
    <string name="login_hint_port">Puerto TCP del servidor</string>
    <string name="mainactivity_fragmentepresent">Ya hay un fragmento</string>
    <string name="title_activity_service">ServiceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="auth_contentdescription_alarm">Imagen de una alarma</string>
    <string name="main_connecting">Conectando...</string>
    <string name="main_connected">Conectado</string>
    <string name="main_progress">Progreso</string>
    <string name="login_default_ip">labtelema.ujaen.es</string>
    <string name="login_default_port">80</string>
    <string name="fragment_auth_doing">Autenticando:</string>
    <string name="fragment_auth_user_default">user1</string>
    <string name="fragment_auth_pass_default">12345</string>
    <string name="auth_correct">Autenticación correcta</string>
    <string name="auth_error">Error en la autenticación</string>
    <string name="LOGIN_CORRECT">Autenticado correctamente</string>
    <string name="service_label_manufacturer">Fabricante</string>
    <string name="service_label_part">Referenica pieza</string>
    <string name="service_label_uds">Unidades</string>
    <string name="service_button_query">Hacer pedido</string>
</resources>
